ANTLR v4 Honey Badger

November 20, 2013

* Sam added method stuff like expr() that calls expr(0). Makes it possible
  to call expr rule from TestRig (grun).

November 14, 2013

* Added Sam's ParserInterpreter implementation that uses ATN after
  deserialization.

	LexerGrammar lg = new LexerGrammar(
		"lexer grammar L;\n" +
  		"A : 'a' ;\n" +
  		"B : 'b' ;\n" +
  		"C : 'c' ;\n");
  	Grammar g = new Grammar(
  		"parser grammar T;\n" +
  		"s : (A{;}|B)* C ;\n",
  		lg);

	LexerInterpreter lexEngine = lg.createLexerInterpreter(new ANTLRInputStream(input));
	CommonTokenStream tokens = new CommonTokenStream(lexEngine);
	ParserInterpreter parser = g.createParserInterpreter(tokens);
	ParseTree t = parser.parse(g.rules.get(startRule).index);

November 13, 2013

* move getChildren() from Tree into Trees (to avoid breaking change)
* Notation:
	/prog/func,         -> all funcs under prog at root
	/prog/*,            -> all children of prog at root
	/*/func,            -> all func kids of any root node
	prog,               -> prog must be root node
	/prog,              -> prog must be root node
	/*,                 -> any root
	*,                  -> any root
	//ID,               -> any ID in tree
	//expr/primary/ID,  -> any ID child of a primary under any expr
	//body//ID,         -> any ID under a body
	//'return',         -> any 'return' literal in tree
	//primary/*,        -> all kids of any primary
	//func/*/stat,      -> all stat nodes grandkids of any func node
	/prog/func/'def',   -> all def literal kids of func kid of prog
	//stat/';',         -> all ';' under any stat node
	//expr/primary/!ID, -> anything but ID under primary under any expr node
	//expr/!primary,    -> anything but primary under any expr node
	//!*,               -> nothing anywhere
	/!*,                -> nothing at root

September 16, 2013

* Updated build.xml to support v4 grammars in v4 itself; compiles XPathLexer.g4
* Add to XPath:
	Collection<ParseTree> findAll(String xpath);
